--- a/index.html
+++ b/index.html
@@ -5,9 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "style.css">
-    <title>Document</title>
+    <link rel = "stylesheet" href = "card-deck-css/css/cardstarter.css"> 
+    <title>Blackjack Project</title>
 </head>
 <body>
-    <script src = "script.js"
+    <script src="script.js"></script>
+       <header>
+           <h1>BLACKJACK</h1>
+       </header>
+        <main>
+           <div id="left">
+               <div class="dealer">
+                <h2>DEALER</h2>
+                    <div class="cards">
+                    </div>
+                    <div id ="dealerscore">
+                        ?
+                    </div>
+                </div>
+                <div class="player">
+                <h2>PLAYER</h2>
+                    <div class="cards">
+                    </div>
+                    <div id ="playerscore">
+                    </div>
+                </div>
+            </div>
+       <div id="middle">
+            <h2>WINNER/LOSER</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+       </div>
+       <div id="right">
+            <p>
+                <button id="startbutton">Start the game!</button>
+            </p>
+            <p>
+                <button id="hitmebutton">Hit me!</button>
+            </p>
+            <p>
+                <button id="staybutton">Stay!</button>
+            </p>
+            <div id = "bank">
+                BANK: 
+            </div>
+       </div>
+    </main>
 </body>
 </html>
