updates constants and adds event listeners

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Blackjack Project</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
        <header>
            <h1>BLACKJACK</h1>
        </header>
@@ -47,9 +47,8 @@
             <p>
                 <button id="staybutton">Stay!</button>
             </p>
-            <div id = "bank">
-                BANK: 
-            </div>
+            <span id = "bank">
+            </span>
        </div>
     </main>
 </body>
