adds functions and adjusts CSS

--- a/index.html
+++ b/index.html
@@ -17,25 +17,20 @@
            <div id="left">
                <div class="dealer">
                 <h2>DEALER</h2>
-                    <div class="cards">
+                    <div id="dealer-cards">
                     </div>
-                    <div id ="dealerscore">
-                        ?
+                    <div id ="dealer-score">
                     </div>
                 </div>
                 <div class="player">
                 <h2>PLAYER</h2>
-                    <div class="cards">
+                    <div id="player-cards">
                     </div>
-                    <div id ="playerscore">
+                    <div id ="player-score">
                     </div>
                 </div>
             </div>
        <div id="middle">
-            <h2>WINNER/LOSER</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
        </div>
        <div id="right">
             <p>
@@ -48,7 +43,11 @@
                 <button id="staybutton">Stay!</button>
             </p>
             <span id = "bank">
+              BANK: 
             </span>
+            <span id = "bet">
+              BET:
+            </span> 
        </div>
     </main>
 </body>
