--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                <div class="dealer">
                 <h2>DEALER</h2>
                     <div id="dealer-cards">
+                        <img height="100px" width="100px"></img>
                     </div>
                     <div id ="dealer-score">
                     </div>
@@ -25,6 +26,8 @@
                 <div class="player">
                 <h2>PLAYER</h2>
                     <div id="player-cards">
+                        <img height="100px" width="100px"></img>
+                        <img height="100px" width="100px"></img>
                     </div>
                     <div id ="player-score">
                     </div>
